updated light pink color for both h3 and #blue - previous color was a light blue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ h3 {
 	height: 35px;
 	padding-left: 20px;
 	padding-top: 10px;
-	background-color: lightblue;
+	background-color: #ffe9ec;
 
 }
 
@@ -54,7 +54,7 @@ h3 {
 	padding-left: 20px;
 	padding-top: 10px;
 	margin-bottom: 20px;
-	background-color: lightblue;
+	background-color: #ffe9ec;
 }
 #redgem, #yellowgem, #greengem, #purplegem {
 	margin-left: 20px;
