--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,14 @@
 body {
 	/* font-family: 'Permanent Marker', cursive; */
 	font-family: 'Kalam', cursive;
+	margin-left: 30px;
 }
 
 #title {
-	margin-left: 30px;
+	margin-left: 20px;
 	font-size: 2em;
 }
+
 
 div {
 	
@@ -56,8 +58,8 @@ h3 {
 	margin-bottom: 20px;
 	background-color: #ffe9ec;
 }
-#redgem, #yellowgem, #greengem, #purplegem {
-	margin-left: 20px;
+#whitegem, #cleargem, #greengem, #purplegem {
+	margin-left: 30px;
 }
 
 footer {
@@ -76,4 +78,8 @@ footer {
 #title {
 	color: palevioletred;
 
+}
+a {
+    color: lightgray;
+    margin-left: 20px;
 }
